[build-system]
requires = ["flit_core>=3.12,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "boring-math"
version = "3.0.0"
readme = "README.md"
requires-python = ">=3.13"
authors = [
  { name = "Geoffrey R. Scheller", email = "geoffrey@scheller.com" },
]
keywords = [
  "mathematics",
  "hobby",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = []
description = "Boring Math homepage and coordinated releases."

[project.urls]
Changelog = "https://github.com/grscheller/boring-math/blob/main/CHANGELOG.md"
Homepage = "https://grscheller.github.io/boring-math"
Source = "https://github.com/grscheller/boring-math"

[project.optional-dependencies]
test = [
  "pytest>=8.4.1",
]

[tool.flit.sdist]
exclude = [
  "docs/",
]

[tool.flit.module]
name = "boring_math.homepage"

[tool.mypy]
explicit_package_bases = true
local_partial_types = true
namespace_packages = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest]
addopts = ["-ra"]
consider_namespace_packages = true
testpaths = ["tests/"]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "E731",
  "C901",
]
"**/*.py" = ["E741"]

[tool.ruff.format]
quote-style = "single"
docstring-code-line-length = 72
